# USB_Test

./: .gitignore  .mxproject  CMakeLists.txt  USB_Test.ioc  download.cfg  stm32g0b1cbtx_flash.ld
Core/Inc/: stm32g0xx_it.h
Core/Inc/Backup/: stm32g0xx_it.h.bak
Core/Src/: gpio.c  main.c  main.cpp  stm32g0xx_it.c  usart.c  usb_drd_fs.c
Core/Src/Backup/: gpio.c.bak  main.cpp.bak  stm32g0xx_it.c.bak  usb_drd_fs.c.bak
Devices/display/interfaces/: display_panel.h
Devices/display/st7735s/: panel_st7735s.cpp
Devices/input/interfaces/: input.h
EventBus/: CMakeLists.txt  event_bus.cpp
EventBus/inc/: event_bus.h
USB/: CMakeLists.txt
USBDriver/: CMakeLists.txt  usb_driver.cpp
USBDriver/inc/: usb_driver.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
project-info/: CMakeLists.txt  project_info_in.h
project-info/inc/: project_info.h
user/: CMakeLists.txt  program.cpp
user/inc/: program.h
